--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -5,22 +5,21 @@ charset-normalizer==3.4.1
 click==8.1.8
 Django==5.1.6
 django-cors-headers==4.7.0
+django-environ==0.12.0
 djangorestframework==3.15.2
 drf-spectacular==0.28.0
 fuzzywuzzy==0.18.0
-idna==3.10
-inflection==0.5.1
-joblib==1.4.2
-jsonschema==4.23.0
-jsonschema-specifications==2024.10.1
-Levenshtein==0.26.1
+python-Levenshtein==0.26.1
+RapidFuzz==3.12.1
 networkx==3.4.2
 nltk==3.9.1
 numpy==2.2.2
+scipy==1.17.0
 psycopg2-binary==2.9.10
-python-Levenshtein==0.26.1
 PyYAML==6.0.2
-RapidFuzz==3.12.1
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+joblib==1.4.2
 referencing==0.36.2
 regex==2024.11.6
 requests==2.32.3
