--- a/Backend/docker-compose.yml
+++ b/Backend/docker-compose.yml
@@ -5,9 +5,9 @@ services:
     image: postgres:14
     restart: always
     environment:
-      POSTGRES_DB: library       # Correspond à DATABASES['default']['NAME']
-      POSTGRES_USER: postgres    # Correspond à DATABASES['default']['USER']
-      POSTGRES_PASSWORD: password  # Correspond à DATABASES['default']['PASSWORD']
+      POSTGRES_DB: library       
+      POSTGRES_USER: postgres    
+      POSTGRES_PASSWORD: password  
     volumes:
       - postgres_data:/var/lib/postgresql/data
     ports:
