--- a/Backend/docker-compose.yml
+++ b/Backend/docker-compose.yml
@@ -13,5 +13,19 @@ services:
     ports:
       - "5432:5432"  # Expose le port PostgreSQL sur la machine hôte
 
+  pgadmin:
+    image: dpage/pgadmin4:latest
+    restart: always
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@example.com
+      PGADMIN_DEFAULT_PASSWORD: admin
+    volumes:
+      - pgadmin_data:/var/lib/pgadmin
+    ports:
+      - "5050:80"  # Interface web accessible sur http://localhost:5050
+    depends_on:
+      - db
+
 volumes:
   postgres_data:
+  pgadmin_data:
